# qoi-control

./: CMakeLists.txt  SZ3_CMakeLists.txt  SZ3_version.hpp  build_script.sh
SZ3_src/: CMakeLists.txt
include/: qoi_utils.hpp
include/LosslessCompressor/: DefaultLevelCompressor.hpp
include/QoIsWizard/: QoIWizard4GE.hpp  QoIWizard4GE_nonLp.hpp
include/Reconstructor/: ComposedReconstructor copy.hpp  ComposedReconstructor.hpp
include/Refactor/: ComposedRefactor copy.hpp  ComposedRefactor.hpp
include/Retriever/: FileRetriever.hpp
include/SizeInterpreter/: GreedyBasedSizeInterpreter.hpp
parallel_src/: CMakeLists.txt  refactorGE.cpp  refactorGE_SZ3.cpp  refactorGE_SZ3_delta.cpp  testGE_PT.cpp  testGE_PT_SZ3.cpp  testGE_PT_SZ3_delta.cpp  testGE_VTOT.cpp  testGE_VTOT_SZ3.cpp  testGE_VTOT_SZ3_delta.cpp
plots/: fig4.py  fig5.py  fig5_1.py  fig5_2.py  fig6.py  fig7.py  fig8.py
run_tests/: GE.sh  Hurricane.sh  NYX.sh  S3D.sh  compute_time.sh  test_general.sh  test_parallel.sh
run_tests/demo/: convert.py  download_data.sh  generate_fig5.sh
test/: CMakeLists.txt  Synthesizer4GE.hpp  estimate_error.cpp  halfing_C.cpp  halfing_C_sz3.cpp  halfing_C_sz3delta.cpp  halfing_Mach.cpp  halfing_Mach_sz3.cpp  halfing_Mach_sz3delta.cpp  halfing_PT.cpp  halfing_PT_sz3.cpp  halfing_PT_sz3delta.cpp  halfing_T.cpp  halfing_T_sz3.cpp  halfing_T_sz3delta.cpp  halfing_Vtot.cpp  halfing_Vtot_general.cpp  halfing_Vtot_sz3.cpp  halfing_Vtot_sz3delta.cpp  halfing_error.cpp  halfing_mu.cpp  halfing_mu_sz3.cpp  halfing_mu_sz3delta.cpp  halfing_x2.cpp  halfing_xixj.cpp  halfing_xixj_sz3.cpp  halfing_xixj_sz3delta.cpp  refactor_data.cpp  test.cpp  test_decomposer.cpp  test_encoder.cpp  test_error_collector.cpp  test_ge.cpp  test_ge_refactor.cpp  test_interleaver.cpp  test_reconstructor.cpp  test_refactor.cpp
