add_executable (refactor_data refactor_data.cpp)
target_include_directories(refactor_data PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(refactor_data ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_xixj halfing_xixj.cpp)
target_include_directories(halfing_xixj PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_xixj ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_xixj_sz3 halfing_xixj_sz3.cpp)
target_include_directories(halfing_xixj_sz3 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_xixj_sz3 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_xixj_sz3delta halfing_xixj_sz3delta.cpp)
target_include_directories(halfing_xixj_sz3delta PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_xixj_sz3delta ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_x2 halfing_x2.cpp)
target_include_directories(halfing_x2 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_x2 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_Vtot_general halfing_Vtot_general.cpp)
target_include_directories(halfing_Vtot_general PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_Vtot_general ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_Vtot halfing_Vtot.cpp)
target_include_directories(halfing_Vtot PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_Vtot ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_Vtot_sz3delta halfing_Vtot_sz3delta.cpp)
target_include_directories(halfing_Vtot_sz3delta PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_Vtot_sz3delta ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_Vtot_sz3 halfing_Vtot_sz3.cpp)
target_include_directories(halfing_Vtot_sz3 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_Vtot_sz3 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_T halfing_T.cpp)
target_include_directories(halfing_T PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_T ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_T_sz3 halfing_T_sz3.cpp)
target_include_directories(halfing_T_sz3 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_T_sz3 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_T_sz3delta halfing_T_sz3delta.cpp)
target_include_directories(halfing_T_sz3delta PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_T_sz3delta ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_C halfing_C.cpp)
target_include_directories(halfing_C PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_C ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_C_sz3 halfing_C_sz3.cpp)
target_include_directories(halfing_C_sz3 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_C_sz3 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_C_sz3delta halfing_C_sz3delta.cpp)
target_include_directories(halfing_C_sz3delta PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_C_sz3delta ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_Mach halfing_Mach.cpp)
target_include_directories(halfing_Mach PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_Mach ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_Mach_sz3 halfing_Mach_sz3.cpp)
target_include_directories(halfing_Mach_sz3 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_Mach_sz3 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_Mach_sz3delta halfing_Mach_sz3delta.cpp)
target_include_directories(halfing_Mach_sz3delta PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_Mach_sz3delta ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_mu halfing_mu.cpp)
target_include_directories(halfing_mu PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_mu ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_mu_sz3 halfing_mu_sz3.cpp)
target_include_directories(halfing_mu_sz3 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_mu_sz3 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_mu_sz3delta halfing_mu_sz3delta.cpp)
target_include_directories(halfing_mu_sz3delta PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_mu_sz3delta ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})

add_executable (halfing_PT halfing_PT.cpp)
target_include_directories(halfing_PT PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_PT ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_PT_sz3 halfing_PT_sz3.cpp)
target_include_directories(halfing_PT_sz3 PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_PT_sz3 ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
add_executable (halfing_PT_sz3delta halfing_PT_sz3delta.cpp)
target_include_directories(halfing_PT_sz3delta PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
target_link_libraries(halfing_PT_sz3delta ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
