function(add_my_executable target source)
    add_executable(${target} ${source})
    target_include_directories(${target} PRIVATE ${MGARDx_INCLUDES} ${SZ3_INCLUDES} ${ZSTD_INCLUDES})
    target_link_libraries(${target} ${PROJECT_NAME} ${SZ3_LIB} ${ZSTD_LIB})
endfunction()

add_my_executable(refactor_data refactor_data.cpp)
add_my_executable(halfing_xixj halfing_xixj.cpp)
add_my_executable(halfing_xixj_sz3 halfing_xixj_sz3.cpp)
add_my_executable(halfing_xixj_sz3delta halfing_xixj_sz3delta.cpp)
add_my_executable(halfing_x2 halfing_x2.cpp)
add_my_executable(halfing_Vtot_general halfing_Vtot_general.cpp)
add_my_executable(halfing_Vtot halfing_Vtot.cpp)
add_my_executable(halfing_Vtot_sz3delta halfing_Vtot_sz3delta.cpp)
add_my_executable(halfing_Vtot_sz3 halfing_Vtot_sz3.cpp)
add_my_executable(halfing_T halfing_T.cpp)
add_my_executable(halfing_T_sz3 halfing_T_sz3.cpp)
add_my_executable(halfing_T_sz3delta halfing_T_sz3delta.cpp)
add_my_executable(halfing_C halfing_C.cpp)
add_my_executable(halfing_C_sz3 halfing_C_sz3.cpp)
add_my_executable(halfing_C_sz3delta halfing_C_sz3delta.cpp)
add_my_executable(halfing_Mach halfing_Mach.cpp)
add_my_executable(halfing_Mach_sz3 halfing_Mach_sz3.cpp)
add_my_executable(halfing_Mach_sz3delta halfing_Mach_sz3delta.cpp)
add_my_executable(halfing_mu halfing_mu.cpp)
add_my_executable(halfing_mu_sz3 halfing_mu_sz3.cpp)
add_my_executable(halfing_mu_sz3delta halfing_mu_sz3delta.cpp)
add_my_executable(halfing_PT halfing_PT.cpp)
add_my_executable(halfing_PT_sz3 halfing_PT_sz3.cpp)
add_my_executable(halfing_PT_sz3delta halfing_PT_sz3delta.cpp)
